# BaseSearch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  run.sh  start.sh
.github/workflows/: ci.yml
examples/: gen_sample.rs
src/: app.rs  db.rs  db_types.rs  duckdb_olap.rs  export.rs  i18n.rs  import.rs  lib.rs  main.rs  olap.rs  schema.rs  search.rs  web.rs  workers.rs
src/app/: actions.rs  advanced_query.rs  analytics_groups.rs  analytics_view.rs  columns.rs  commands.rs  compare_view.rs  dialogs.rs  field_state.rs  format.rs  import_report_view.rs  messages.rs  month_chart.rs  overview_view.rs  pivot_view.rs  platform.rs  price_view.rs  profile_view.rs  query_history.rs  reports.rs  requests.rs  results_table.rs  search_controls.rs  state.rs  status_bar.rs  stored_queries.rs  theme.rs  toolbar.rs  ui_text.rs  underpricing_view.rs  widgets.rs
src/domain/: table.rs
src/storage/: analytics_columns.rs  analytics_repo.rs  connection.rs  derived.rs  extra.rs  fts_index.rs  import_log.rs  maintenance.rs  meta.rs  migrations.rs  mod.rs  normalize.rs  query_plan.rs  record_writer.rs  records.rs  result_repo.rs  search_sql.rs  search_text.rs  source_fields.rs  table_shape.rs
src/web/: http.rs
src/workers/: jobs.rs  protocol.rs  startup.rs
tests/: core.rs
web/: app.css  app.js  index.html
