[package]
name = "base-search"
version = "1.4.0"
edition = "2024"
description = "Local search over large Excel databases"
license = "MIT"

[lib]
name = "base_search"
path = "src/lib.rs"

[[bin]]
name = "BaseSearch"
path = "src/main.rs"

[[bin]]
name = "base-search-cli"
path = "src/bin/cli.rs"

[dependencies]
calamine = { version = "0.35.0", features = ["dates"] }
chrono = "0.4"
csv = "1.4.0"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.3"
egui_extras = "0.34.3"
getrandom = "0.3"
rfd = "0.17.2"
rusqlite = { version = "0.40.1", features = ["bundled", "functions"] }
rust_xlsxwriter = { version = "0.95.0", features = ["constant_memory"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
